--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.12",
+    "multer": "^1.4.3",
     "pug": "^3.0.2"
   },
   "devDependencies": {
